--- a/Stem_project_2024-2025_Data.html
+++ b/Stem_project_2024-2025_Data.html
@@ -8,7 +8,7 @@ body {
 }
 </style>
 <title>Stem project-Data</title>
-<a href="../Stem_project_2024-2025.html">Home page</a>
+<a href="Stem_project_2024-2025.html">Home page</a>
 <a href="Stem_project_2024-2025_Tech.html">Tech</a>
 <a href="Stem_project_2024-2025_Plants.html">Plants</a>
 <a href="Stem_project_2024-2025_References.html">References</a>
@@ -25,17 +25,17 @@ The data that the first air quality monter measures (VINDSTYRKA) is AQI (air qua
 
 <p>The data charts below are measuring the air quality without plants.</p>
 <h3>VINDSTYRKA</h3>
-<img src="../Pictures/Screenshot 2025-01-19 144015.png" alt="Data chart 1">
+<img src="Screenshot 2025-01-19 144015.png" alt="Data chart 1">
 <h3>11-in-1 Air Quality Monitor, Indoor</h3>
-<img src="../Pictures/Screenshot 2025-01-19 144338.png" alt="Data chart 2">
+<img src="Screenshot 2025-01-19 144338.png" alt="Data chart 2">
 
 
 <p>The secound set of charts is measuring AQI with plants.<p>
 <h3>VINDSTYRKA</h3>
-<img src="../Pictures/Screenshot 2025-03-08 153826.png" alt="Data chart 1">
+<img src="Screenshot 2025-03-08 153826.png" alt="Data chart 1">
 
 <h3>11-in-1 Air Quality Monitor, Indoor<h3>
- <img src="../Pictures/Screenshot 2025-03-08 153553.png" alt="Data chart 2 ">
+ <img src="Screenshot 2025-03-08 153553.png" alt="Data chart 2 ">
 
 
 </body>
