--- a/Stem_project_2024-2025_Plants.html
+++ b/Stem_project_2024-2025_Plants.html
@@ -7,7 +7,7 @@ body {
 }
 </style>
 <title>Stem project-PLants</title>
-<h3><a href="../Stem_project_2024-2025.html">Home page</a></h3>
+<h3><a href="Stem_project_2024-2025.html">Home page</a></h3>
 <h3><a href="Stem_project_2024-2025_Data.html">Data</a></h3>
 <h3><a href="Stem_project_2024-2025_Tech.html">Tech</a></h3>
 <h3><a href="Stem_project_2024-2025_References.html">References</a></h3>
@@ -25,20 +25,20 @@ body {
 <h2>1 Spyder Plant</h2>
 <p>Spider plants helps clean indoor air. Studies have shown that spider plants are quite effective in cleaning indoor air by absorbing chemicals in homes or offices. Spider plants like bright light, near but not on a window.</p>
 
-<img src="Page_Pictures/IMG_0874.JPG" alt="Spyder Plant ">
+<img src="IMG_0874.JPG" alt="Spyder Plant ">
 
 
 <h2>1 Snake Plant</h2>
 <p>A benifit of a Snake plant is that they remove indoor air pollutants. FUN FACT: "They perfect plants to attract money, prosperity, and good energy."</p> 
 
-<img src="Page_Pictures/IMG_0876.JPG" alt="Snake Plant ">
+<img src="IMG_0876.JPG" alt="Snake Plant ">
   
 
 <h2>2 Peace Lilys</h2> 
 <p>A peace lily is a flowering plant in the family Araceae, native to tropical regions  Certain species of Spathiphyllum is the real name for a peace lily.</p>
 
 
-<img src="Page_Pictures/IMG_0879.JPG" alt="Peace Lily">
+<img src="IMG_0879.JPG" alt="Peace Lily">
   
 
         
@@ -48,7 +48,7 @@ body {
 
 
 
-<img src="Page_Pictures/IMG_0875.JPG" alt="Aloe Vera">  
+<img src="IMG_0875.JPG" alt="Aloe Vera">  
 
 
 
