--- a/Stem_project_2024-2025_Tech.html
+++ b/Stem_project_2024-2025_Tech.html
@@ -7,7 +7,7 @@ body {
 }
 </style>
 <title>Stem project-Tech</title>
-<a href="../Stem_project_2024-2025.html">Home page</a>
+<a href="Stem_project_2024-2025.html">Home page</a>
 <a href="Stem_project_2024-2025_Data.html">Data</a>
 <a href=Stem_project_2024-2025_Plants.html">Plants</a>
 <a href="Stem_project_2024-2025_References.html">References</a>
@@ -21,7 +21,7 @@ body {
 
 <p>This monitor checks the air quality by monitoring harmful particles (PM2.5), humidity and total Volatile Organic Compounds (TVOC) in your home.
 You can place it in the living room, bedroom, and other rooms. With its small size, you can move it with ease from 1 room to another so you don't have to worry if the air quality is good negative and even medium!👌</p> 
-<img src="Page_Pictures/IMG_0902.JPG" alt="VINDSTYRKA ">
+<img src="IMG_0902.JPG" alt="VINDSTYRKA ">
 
 
 
@@ -29,7 +29,7 @@ You can place it in the living room, bedroom, and other rooms. With its small si
 
 <p>This product is very useful.It measures CO2 (carbon dioxide), HCHO (cancer causing substance), TVOC (Total Volatile Organic Compounds.), CO (Carbon monoxide), PM2.5 ( wich are particles that are 2.5 microns less in diameter.), PM10 (Those with a diameter of 10 microns or less), and AQI (Air quality).
 This divice is rechargable and is easy to move from room to room!👌</p>  
-<img src="Page_Pictures/IMG_0893.JPG" alt=" 11-in-1 Air Quality Monitor, Indoor">
+<img src="IMG_0893.JPG" alt=" 11-in-1 Air Quality Monitor, Indoor">
 
 
 </body>
