--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ body {
 }
 </style>
 <h1>Stem project</h1>
-<img src="Pictures/Logo 2 (b).png" alt=" profile picture">
+<img src="Logo 2 (b).png" alt=" profile picture">
 <p>Do you ever worry how indoor air quailty affects your health? This website will give you ways to improve your air quality. During my exeperement I tested if plants can help improve air quality. If you want to find out my result you should look down and read a little about how I did it, the plants I used, type of air quality monitors I used, refrences, and more info.</p>  
 
 
