--- a/Stem_project_2024-2025_Plants.html
+++ b/Stem_project_2024-2025_Plants.html
@@ -7,10 +7,10 @@ body {
 }
 </style>
 <title>Stem project-PLants</title>
-<h3><a href="Stem_project_2024-2025.html">Home page</a></h3>
-<h3><a href="Stem_project_2024-2025_Data.html">Data</a></h3>
-<h3><a href="Stem_project_2024-2025_Tech.html">Tech</a></h3>
-<h3><a href="Stem_project_2024-2025_References.html">References</a></h3>
+<a href="Stem_project_2024-2025.html">Home page</a>
+<a href="Stem_project_2024-2025_Data.html">Data</a>
+<a href="Stem_project_2024-2025_Tech.html">Tech</a>
+<a href="Stem_project_2024-2025_References.html">References</a>
 
 
 </head>
@@ -18,7 +18,7 @@ body {
 
 <h1>Plants</h1>
 
-<p>During the expermint I used five diferent plants.All the plants that were used during the expermint have very good filitring qualities.The system works by, the plant takes in carbon dioxide and other negitave pollutants, which are then broken down.Then the plant lets out clean CO2(oxegen) 
+<p>During the expermint I used five diferent plants.All the plants that were used during the expermint have very good filitring qualities.The system works by, the plant takes in carbon dioxide and other negitave pollutants, which are then broken down.Then the plant lets out clean CO2(oxegen) </p>
 
 <p>The plants I used are listed below.</p>
 
