--- a/Stem_project_2024-2025_Plants.html
+++ b/Stem_project_2024-2025_Plants.html
@@ -7,7 +7,7 @@ body {
 }
 </style>
 <title>Stem project-PLants</title>
-<a href="Stem_project_2024-2025.html">Home page</a>
+<a href="index.html">Home page</a>
 <a href="Stem_project_2024-2025_Data.html">Data</a>
 <a href="Stem_project_2024-2025_Tech.html">Tech</a>
 <a href="Stem_project_2024-2025_References.html">References</a>
