--- a/Stem_project_2024-2025_References.html
+++ b/Stem_project_2024-2025_References.html
@@ -8,7 +8,7 @@ body {
 }
 </style>
 <title>Stem project-References</title>
-<a href="../Stem_project_2024-2025.html">Home page</a>
+<a href="index.html">Home page</a>
 <a href="Stem_project_2024-2025_Tech.html">Tech</a>
 <a href="Stem_project_2024-2025_Plants.html">Plants</a>
 <a href="Stem_project_2024-2025_Data.html">Data</a>
