--- a/Stem_project_2024-2025_Tech.html
+++ b/Stem_project_2024-2025_Tech.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+x <!DOCTYPE html>
 <html>
 <head>
 <style>
@@ -7,7 +7,7 @@ body {
 }
 </style>
 <title>Stem project-Tech</title>
-<a href="Stem_project_2024-2025.html">Home page</a>
+<a href="index.html">Home page</a>
 <a href="Stem_project_2024-2025_Data.html">Data</a>
 <a href=Stem_project_2024-2025_Plants.html">Plants</a>
 <a href="Stem_project_2024-2025_References.html">References</a>
